Wrapped object in interface tag, fixed minor aesthetic properties

--- a/resources/ui/style/overrides.css
+++ b/resources/ui/style/overrides.css
@@ -68,7 +68,7 @@ separator.thick-separator {
 
 .entry-poster-preview-picture {
     border-radius: 10px;
-    min-width: 99pt;
+    min-width: 120pt;
     min-height: 176pt;
 }
 
